// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Partial manga should render correctly Should render correctly when showId is true 1`] = `
<div>
  <h5
    className="MuiTypography-root makeStyles-title-1 MuiTypography-h5"
  >
    Dr. STONE
  </h5>
  <div
    className="makeStyles-details-3"
  >
    <a
      href="https://myanimelist.net/manga/103897"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Dr. STONE"
        className="makeStyles-thumbnail-2"
        src="https://mangadex.org/images/manga/20882.jpg?1585634146"
      />
    </a>
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-justify-xs-space-between"
    >
      <table
        className="makeStyles-infoTable-5"
      >
        <tbody>
          <tr>
            <td>
              <p
                className="MuiTypography-root MuiTypography-body1"
              >
                Manga id:
              </p>
            </td>
            <td>
              <p
                className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
              >
                1
              </p>
            </td>
          </tr>
          <tr>
            <td>
              <p
                className="MuiTypography-root MuiTypography-body1"
              >
                Latest release:
              </p>
            </td>
            <td>
              <p
                aria-describedby={null}
                className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Sun, 05 Jul 2020 16:00:00 GMT"
              >
                Jul 5th 2020, 16:00 - 1 day ago
              </p>
            </td>
          </tr>
          <tr>
            <td>
              <p
                className="MuiTypography-root MuiTypography-body1"
              >
                Estimated release interval:
              </p>
            </td>
            <td>
              <p
                className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
              >
                7 days 0 hours
              </p>
            </td>
          </tr>
          <tr>
            <td>
              <p
                className="MuiTypography-root MuiTypography-body1"
              >
                Estimated next release:
              </p>
            </td>
            <td>
              <p
                className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
              >
                Jul 12th 2020, 16:00
              </p>
            </td>
          </tr>
          <tr>
            <td>
              <p
                className="MuiTypography-root MuiTypography-body1"
              >
                Latest chapter:
              </p>
            </td>
            <td>
              <p
                className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
              >
                157
              </p>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        className="makeStyles-sourceList-6"
      >
        <nav
          aria-labelledby="nested-list-subheader"
          className="MuiList-root makeStyles-root-8  MuiList-padding"
        >
          <div
            aria-disabled={false}
            className="MuiButtonBase-root MuiListItem-root makeStyles-mainItem-9 MuiListItem-gutters MuiListItem-button"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="MuiListItemText-root makeStyles-listOpener-11"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
              >
                Manga sources
              </span>
            </div>
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
            <span
              className="MuiTouchRipple-root"
            />
          </div>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`Partial manga should render correctly Should render correctly with input 1`] = `
<div>
  <h5
    className="MuiTypography-root makeStyles-title-1 MuiTypography-h5"
  >
    Dr. STONE
  </h5>
  <div
    className="makeStyles-details-3"
  >
    <a
      href="https://myanimelist.net/manga/103897"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Dr. STONE"
        className="makeStyles-thumbnail-2"
        src="https://mangadex.org/images/manga/20882.jpg?1585634146"
      />
    </a>
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-justify-xs-space-between"
    >
      <table
        className="makeStyles-infoTable-5"
      >
        <tbody>
          <tr>
            <td>
              <p
                className="MuiTypography-root MuiTypography-body1"
              >
                Latest release:
              </p>
            </td>
            <td>
              <p
                aria-describedby={null}
                className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Sun, 05 Jul 2020 16:00:00 GMT"
              >
                Jul 5th 2020, 16:00 - 1 day ago
              </p>
            </td>
          </tr>
          <tr>
            <td>
              <p
                className="MuiTypography-root MuiTypography-body1"
              >
                Estimated release interval:
              </p>
            </td>
            <td>
              <p
                className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
              >
                7 days 0 hours
              </p>
            </td>
          </tr>
          <tr>
            <td>
              <p
                className="MuiTypography-root MuiTypography-body1"
              >
                Estimated next release:
              </p>
            </td>
            <td>
              <p
                className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
              >
                Jul 12th 2020, 16:00
              </p>
            </td>
          </tr>
          <tr>
            <td>
              <p
                className="MuiTypography-root MuiTypography-body1"
              >
                Latest chapter:
              </p>
            </td>
            <td>
              <p
                className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
              >
                157
              </p>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        className="makeStyles-sourceList-6"
      >
        <nav
          aria-labelledby="nested-list-subheader"
          className="MuiList-root makeStyles-root-8  MuiList-padding"
        >
          <div
            aria-disabled={false}
            className="MuiButtonBase-root MuiListItem-root makeStyles-mainItem-9 MuiListItem-gutters MuiListItem-button"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="MuiListItemText-root makeStyles-listOpener-11"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
              >
                Manga sources
              </span>
            </div>
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
            <span
              className="MuiTouchRipple-root"
            />
          </div>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`Partial manga should render correctly Should render correctly with minimal input 1`] = `
<div>
  <h5
    className="MuiTypography-root makeStyles-title-1 MuiTypography-h5"
  >
    Dr. STONE
  </h5>
  <div
    className="makeStyles-details-3"
  >
    <a
      href={null}
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Dr. STONE"
        className="makeStyles-thumbnail-2"
        src={null}
      />
    </a>
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-justify-xs-space-between"
    >
      <table
        className="makeStyles-infoTable-5"
      >
        <tbody>
          <tr>
            <td>
              <p
                className="MuiTypography-root MuiTypography-body1"
              >
                Latest release:
              </p>
            </td>
            <td>
              <p
                aria-describedby={null}
                className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Unknown"
              >
                Unknown
              </p>
            </td>
          </tr>
          <tr>
            <td>
              <p
                className="MuiTypography-root MuiTypography-body1"
              >
                Estimated release interval:
              </p>
            </td>
            <td>
              <p
                className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
              >
                Unknown
              </p>
            </td>
          </tr>
          <tr>
            <td>
              <p
                className="MuiTypography-root MuiTypography-body1"
              >
                Estimated next release:
              </p>
            </td>
            <td>
              <p
                className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
              >
                Unknown
              </p>
            </td>
          </tr>
          <tr>
            <td>
              <p
                className="MuiTypography-root MuiTypography-body1"
              >
                Latest chapter:
              </p>
            </td>
            <td>
              <p
                className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
              >
                Unknown
              </p>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        className="makeStyles-sourceList-6"
      >
        <nav
          aria-labelledby="nested-list-subheader"
          className="MuiList-root makeStyles-root-8  MuiList-padding"
        >
          <div
            aria-disabled={false}
            className="MuiButtonBase-root MuiListItem-root makeStyles-mainItem-9 MuiListItem-gutters MuiListItem-button"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="MuiListItemText-root makeStyles-listOpener-11"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
              >
                Manga sources
              </span>
            </div>
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
            <span
              className="MuiTouchRipple-root"
            />
          </div>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`Partial manga should render correctly Should render correctly with no input 1`] = `null`;
